Preventing background image from stretching

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -37,6 +37,7 @@
     position: absolute;
     z-index: -1;
     filter: blur(3px);
+    object-fit: cover;
 }
 .wave-icon {
     position: absolute;
